--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,5 @@
     <string name="_3">Урок 3.</string>
     <string name="_4">Урок 4.</string>
     <string name="_5">Урок 5.</string>
+    <string name="phrases">Фразы</string>
 </resources>
